Un espacio en el comentario

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta name="keywords" content="Harina,leche,huevos,comida,galletas"> <!--El contenido es como agregar etiquetas para que los busccadores den con nuestra pagina primero, en este caso el nombre es eywords o palabras clave.-->
     <meta name="description" content="Esta es una prueba de los metadatos para dar una descripcion de mi pagina."> <!--Aqui se agrega una descripcion de mi pagina.-->
     <meta name="author" content="Langeloo"> <!-- Aqui se pone el nombre del autor de la pagina-->
-    <meta name="copyright" content="Langeloo S.A."> <!--Si la pagina tiene algun tipo de derechos de autor se pone el nombre de la organizacion propietaria.-->
-    <meta name="robots" content="index"> <!--Le decimos si la pagina debe ser indexada o no, osea esta en un indice. Para el caso de que la pagina no este indexada se pone content="noindex"-->
+    <meta name="copyright" content="Langeloo S.A."> <!--Si la pagina tiene algun tipo de derechos de autor se pone el nombre de la organizacion propietaria-->
+    <meta name="robots" content="index"> <!--Le decimos si la pagina debe ser indexada o no, osea esta en un indice. Para el caso de que la pagina no este  indexada se pone content="noindex"-->
 
 </head>
 <body>
